// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardMetricTotals Component should handle custom card displays: fulfilled 1`] = `
<graphcardmetrictotals
  props="{
  "children": []
}"
>
  <div
    class="curiosity-usage-graph__totals"
    data-test="graphMetricTotals-hello-world"
    data-test-data="{"dataSets":[]}"
  >
    <div>
      <div
        class="curiosity-usage-graph__totals-column"
      >
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-0"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                lorem
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              t(ipsum-{{data}}, {"testId":"custom test id","data":"{\\"dataSets\\":[]}"})
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              dolor sit timestamp
            </div>
          </div>
        </article>
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-2"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-1"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                hello-{"dataSets":[]}
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              world
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              dolor sit timestamp
            </div>
          </div>
        </article>
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-3"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-2"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-3"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                dolor
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              sit
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              dolor sit timestamp-{"dataSets":[]}
            </div>
          </div>
        </article>
      </div>
    </div>
    <div>
      <div
        class="curiosity-usage-graph__totals-graph-column"
      />
    </div>
  </div>
</graphcardmetrictotals>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: error 1`] = `
<div
  className="curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"dataSets":[]}"
>
  <div>
    <div
      className="curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-usage-graph__totals-column-card blur"
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            />
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div />
        </CardBody>
        <CardFooter>
          <div />
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: fulfilled 1`] = `
<div
  className="curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"dataSets":[]}"
>
  <div>
    <div
      className="curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              lorem
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div>
            ipsum
          </div>
        </CardBody>
        <CardFooter>
          <div>
            dolor sit
          </div>
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: pending 1`] = `
<div
  className="curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"dataSets":[]}"
>
  <div>
    <div
      className="curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              <Loader
                skeletonProps={
                  {
                    "size": "lg",
                  }
                }
                tableProps={{}}
                variant="skeleton"
              />
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div>
            <Loader
              skeletonProps={
                {
                  "height": "60px",
                  "size": "lg",
                }
              }
              tableProps={{}}
              variant="skeleton"
            />
          </div>
        </CardBody>
        <CardFooter>
          <div>
            <Loader
              skeletonProps={
                {
                  "size": "lg",
                }
              }
              tableProps={{}}
              variant="skeleton"
            />
          </div>
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should render a basic component: basic 1`] = `
<graphcardmetrictotals
  props="{
  "children": [
    {}
  ]
}"
>
  <div
    class="curiosity-usage-graph__standalone"
    data-test="graphStandalone"
  >
    lorem ipsum
  </div>
</graphcardmetrictotals>
`;
